# TorchWindow

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
ext/: CMakeLists.txt
ext/inc/: twkernel.h
ext/src/: kernel.cu
inc/: twcommon.h  twconnect_private.h  twcuda.h  twcuda_private.h  twinterface.h  twvulkan.h  twvulkan_private.h
src/: __init__.py  torchwindow.c  torchwindow.py  twinterface.c
src/twconnect/: CMakeLists.txt  twconnect.c
src/twcuda/: CMakeLists.txt  twcuda.c
src/twvulkan/: CMakeLists.txt  twvulkan.c
src/twvulkan/shaders/: compile.bat  frag.spv  shader.frag  shader.vert  vert.spv
